--- a/css/style.css
+++ b/css/style.css
@@ -5,13 +5,22 @@
     font-family: 'Quicksand';
   }
   
-  html, body {
+
+
+ html, body {
     margin: 0px !important;
     color: #7f8c8d;
     font-size: 16px;
     background-color: #dde1e2; 
     width: 100%;
+ 
+ 
+    overscroll-behavior-y: contain;
+    -webkit-user-select: none;
+    -webkit-tap-highlight-color: transparent;
+    -webkit-touch-callout: none;
 }
+
 
 /* Personalizados */
 .oculto {
